# Langchain_project

./: langchain_basic.ipynb  pyproject.toml  qa_chatbot.py  test_case_generator.py
